# lox-interpreter-rs

./: Cargo.toml  README.md
src/: ast_display.rs  ast_interpret.rs  class.rs  environment.rs  error.rs  expr.rs  expr_display.rs  expr_interpret.rs  expr_resolve.rs  function.rs  instance.rs  lib.rs  literal.rs  main.rs  native_function.rs  parser.rs  resolver.rs  scanner.rs  statement.rs  stmt_display.rs  stmt_interpret.rs  stmt_resolve.rs  token.rs
tests/: ch08_test.rs  ch09_test.rs  ch10_test.rs  ch11_test.rs  ch12_test.rs  ch13_test.rs  closure.lox  constructor.lox  if_else.lox  inherit_from_nonclass.lox.e  inherit_from_self.lox.e  initializer_edge_cases.lox  instance_fields.lox  instance_fields.lox.e  instance_methods.lox  invalid_return.lox.e  invalid_return_in_initializer.lox.e  invalid_super_in_non_subclass.lox.e  invalid_super_in_nonclass.lox.e  invalid_this.lox.e  logical_op.lox  loop.lox  native_fun.lox  nested_writes_to_outer_vars.lox  new_var_reads_outer_shadow.lox  new_var_reads_outer_shadow.lox.e  redefinition.lox.e  scoping_test.rs
tests/common/: mod.rs
