[package]
name = "lox-interpreter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.5.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.1"

[profile.release]
debug = true
